# ccfdns

./: .CodeQL.yml  .gitignore  .gitmodules  CMakeLists.txt  README.md  SUPPORT.md  adns_types.cpp  adns_types.h  asan_blacklist.txt  base32.cpp  base32.h  build.sh  ccfdns.cpp  ccfdns_json.h  ccfdns_rpc_types.h  compression.h  dnsupdate  get_root.py  key.conf  keys.h  qvl.cpp  qvl.h  resolver.cpp  resolver.h  rfc1035.h  rfc3596.h  rfc4034.cpp  rfc4034.h  rfc5155.cpp  rfc5155.h  rfc6891.h  rfc7671.h  rfc8659.h  serialization.h  small_vector.h
.devcontainer/: Dockerfile  devcontainer.json  post_create_setup.sh
.github/workflows/: README.md  ci.yml  codeql-analysis.yml
demo/: README.md  adns.sh  bind.sh  demo.md  named.conf  pin_ksk.sh  resolve.sh  resolver.sh  service.py  service.sh  setup.sh
demo/adns/: adns.sh
demo/client/: bind.sh  discover_and_verify_adns_ksk.sh  ksk.py  pin_ksk.sh  pin_trusted_ksk.py  resolve.sh
demo/server/: service.sh
extension/: README.md  background.js  blocked.html  blocked.js  cbor.js  jquery.js  manifest.json  pako.min.js  popup.css  popup.html  popup.js  ravl.js  ravl.wasm
include/: attestation.h  base32.h  ccfdns_json.h  ccfdns_rpc_types.h  cose.h  formatting.h  keys.h  resolver.h  rfc1035.h  rfc4034.h  rfc5155.h  rfc6891.h  rfc7671.h
misc/: dane.patch
misc/ossldemo/: demo.md  diagram.txt  hookup_custom.sh  ossl.3.3.patch  prepare_vm.sh  restore_original.sh
python/: get_root.py
scripts/: check-cmake-format.sh  ci-checks.sh  setup-ci.sh  setup-dev.sh
src/: ccfdns.cpp  resolver.cpp  rfc4034.cpp  rfc5155.cpp
tests/: .gitignore  adns.ccf.dev.py  adns_acme_challenge_handler.h  adns_attestation.py  adns_ccf_dev.py  adns_service.py  adns_tools.py  ccf_demo_service.cpp  ccf_demo_service.py  ccf_demo_service_test.py  did_utils.py  dns.py  dnscrypt-proxy.toml  e2e_aci.py  e2e_aci_pebble.py  e2e_basic.py  e2e_everything.py  e2e_simple.py  jwt.js  pebble.py  queryperf.cpp  requirements.txt  resolve.py  resolver_tests.cpp  run_adns.py  sample_snp_attestation_genoa.cbor  sample_snp_attestation_milan.cbor  service.cpp  set_venv.sh  tests.sh
tests/constitution/: actions.js
tests/policy/: register_tee_in_service.rego  register_tee_on_platform.rego  update_policy.rego
tests/service/: Dockerfile  build.sh  deploy.py  requirements.txt  run.sh  service.cpp  service.py  template.json
tools/: attestation.py
verifier/: .gitignore  CMakeLists.txt  README.md  adns-verify.py  pyravl.c  requirements.txt  setup.py
